# 3824B1FI2-2

FRANTSEV_DE/Lab5/: Lab5.cpp  README.txt  examples.txt
FRANTSEV_DE/Lab6/: Lab6.cpp  README.txt
FRANTSEV_DE/LabX/: LabX.cpp  LabX.sln  README.txt
Lab4/: prog0.cpp
Nesterov/LabX/: CMakeLists.txt  contact.c  contact.h  contacts.txt  lab.c  my_string.c  my_string.h  utility.c  utility.h
Nesterov/Taylor_lab/: calculations.c  calculations.h  lab.c
lab0/: Boyko.c
lab1/: Boyko.c
lab2/: Boyko.c  Schepetilnikova2.2.cpp
lab3/: Boyko.c  Schepetilnikova3.cpp  SchepetilnikovaMA3.cpp  Zhaksylykova3.cpp  prog0.cpp
lab3/Nesterov/: lab.c
lab4/: Boyko.c  Komarovlaba4_Shop.cpp  SchepetilnikovaMA4.cpp
lab5/: Boyko.c  prog0.cpp
lab5/Nesterov/: lab.c
lab6/: Boyko.c  prog0.cpp
lab6/Nesterov/: lab.c
